WEB APP: visual representation of status as steps added menu to change the status WS: get study by obfuscation code WS cliente: getStudyByObfudcationCode es-search: index obfuscation code, not analysed. some clean up.

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -89,6 +89,7 @@ label.searchFilter=Filter your results
 label.publicDate=Select the public release date
 label.updateReleaseDate=Update release date
 label.makeStudyPublic=Make it public
+label.status.requestCuration=Ready for curation
 label.updatestudy=Update study
 label.publictoprivate=Make study private
 label.deleteStudy=Delete study
