--- a/metabolights-webservice/src/main/resources/messages_en.properties
+++ b/metabolights-webservice/src/main/resources/messages_en.properties
@@ -238,7 +238,7 @@
 #msg.searchSuggestions=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples <a href="search?freeTextQuery=alanine">alanine</a>, <a href="search?freeTextQuery=human">human</a>, <a href="search?freeTextQuery=urine">urine</a>, <a href="search?freeTextQuery=MTBLS1">MTBLS1</a>
 #msg.noPageFound=We could not find the page requested:
 #msg.noStudyFound=Hmmm... We could not find the study you requested
-#msg.studyAccessRestricted=This is a PRIVATE study, you are not Authorised to view this study.
+#msg.studyAccessRestricted=This is a SUBMITTED study, you are not Authorised to view this study.
 #msg.nothingFoundPersonal=You currently have no studies in MetaboLights. If you would like to submit some studies now go to our <a href="submittoqueue">Submit</a> page
 #msg.indexed=Database indexed.
 #msg.studyIndexed=Study indexed.
@@ -460,7 +460,7 @@ mail.status.body.public= Congratulations!. Your study ({1}) is now {0}. Now the 
 #title.study.paper.link=Public Link
 #label.study.paper.link=This is the official link for referencing your MetaboLights study in any paper, website or other communication.
 #title.study.private.link=Private Pre-Publication Link
-#label.study.private.link=Share this link with reviewers and other trusted parties. Anyone with this link can access your PRIVATE study.
+#label.study.private.link=Share this link with reviewers and other trusted parties. Anyone with this link can access your SUBMITTED study.
 #label.study.share=Share Study
 #label.fileList.Input.placeholder=Type part of a filename and press enter to select. Prefix with ! to deselect.
 #msg.confirmValidation=I confirm that this study successfully passes ISAcreator validation
