DAO: delete study tweaks WS: Implement delete study WS_client: Implement delete method and test

--- a/metabolights-webservice/src/main/resources/messages_en.properties
+++ b/metabolights-webservice/src/main/resources/messages_en.properties
@@ -36,7 +36,7 @@ mail.queuedPRDUpdate.body=Hi {0}\n\nYou have requested to update the public rele
 mail.queuedDeletion.subject=The study {0} is now waiting to be deleted.
 mail.queuedDeletion.body=Hi {0}\n\nYou have requested to delete study {1}. \nBe aware that this accession number will no longer be available, so please do not try to use this reference in future.\n\nPlease be patient whilst your request is processed.\nUntil then, just keep an eye for our next email.\n\nMany thanks for using MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nServer name\: {2}\nStudy\:{1}\nDELETE.
 mail.studyDeleted.subject=Study {0} deleted.
-mail.studyDeleted.body=We are happy to inform you that your study ({0}) has been successfully deleted and is no longer in our system.
+mail.studyDeleted.body=Your study ({0}) has been successfully deleted and is no longer in our system.
 mail.studySoonLive.subject=Your MetaboLights study ({0}) will go public soon.
 mail.studySoonLive.body=Good news! \n\nThis is just a reminder that your study {0} will be publicly available on the {1}.\n
 
