MODEL: ORCID added
DAO: Use new ISAcreator API 1.7.7.1
Some debuging lines added.
Orcid added

WEBAPP: hibernate dependencies tidy up + upgrade to 4.2.11
Add orcid
initialise apitoken
validate orcid

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -47,6 +47,7 @@ label.lastName=Last name
 label.affili=Affiliation/Institution
 label.affiliUrl=Web address for affiliation/institution (URL)
 label.country=Country
+label.orcid=<a href="www.orcid.org" target="_blank">ORCID</a>
 label.userStatus=Status
 label.userJoinDate=Join date
 label.create=Create
@@ -371,6 +372,7 @@ Size.metabolightsUser.password=The password should be at least six characters.
 Size.metabolightsUser.username=The user name should be at least three characters.
 Duplicate.metabolightsUser.email=This email address already exists in our database.
 NotEmpty.concatUsForm.message=Message must not be empty
+NotValid.metabolightsUser.orcid={0}
 
 # General controller messages, prefix with controller name
 Entry.fileMissing=File does not exist, please contact the MetaboLights Team
