WS: return search error and query when search fails WEBAPP: Search page tweaks (3 modes implemented properly) hide pager when only 1 page.

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -226,16 +226,25 @@ msg.accountActive.old=\n\nYour new MetaboLights account "{0}" has been activated
 \n\n\nKind regards,\
 \nThe MetaboLights Team
 msg.pleaseWaitForUpload=Please wait a while for the file to be uploaded...
-msg.searchedInfo=MetaboLights results for
-msg.browsingInfo=You are browsing MetaboLights
+
+# Search pages modes messages
+#msg.searchedInfo=MetaboLights results for {{}}
+#msg.browsingInfo=You are browsing MetaboLights
+#msg.searchResults=Search result(s)
 msg.otherebiresults=Show more data from EMBL-EBI
-msg.searchResults=Search result(s)
 msg.nothingFound=No results were found for your query
-msg.searchSuggestions=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples <a href="search?freeTextQuery=alanine">alanine</a>, <a href="search?freeTextQuery=human">human</a>, <a href="search?freeTextQuery=urine">urine</a>, <a href="search?freeTextQuery=MTBLS1">MTBLS1</a>
+#msg.nothingFoundPersonal=You currently have no studies in MetaboLights. If you would like to submit some studies now go to our <a href="submittoqueue">Submit</a> page
+#msg.searchSuggestions=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples <a href="search?freeTextQuery=alanine">alanine</a>, <a href="search?freeTextQuery=human">human</a>, <a href="search?freeTextQuery=urine">urine</a>, <a href="search?freeTextQuery=MTBLS1">MTBLS1</a>
+msg.browse.title=You are browsing MetaboLights
+msg.browse.noresults=Sorry, it seems there are no public studies available to browse. Do you want to submit the first one?
+msg.search.title=You are searching MetaboLights
+msg.search.noresults=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples are alanine, human, urine or MTBLS1.
+msg.mysubmissions.title=My submissions
+msg.mysubmissions.noresults=You currently have no studies in MetaboLights. If you would like to submit some studies now go to our submit page.
 msg.noPageFound=We could not find the page requested:
 msg.noStudyFound=Hmmm... We could not find the study you requested
 msg.studyAccessRestricted=This is a PRIVATE study, you are not Authorised to view this study.
-msg.nothingFoundPersonal=You currently have no studies in MetaboLights. If you would like to submit some studies now go to our <a href="submittoqueue">Submit</a> page
+
 msg.indexed=Database indexed.
 msg.studyIndexed=Study indexed.
 msg.wsdl.error=The global EBI search provider is currently not respoding. Sorry for any inconvenience. Please try again later.
