point to new dependency versions (4.0) WEBAPP: new search in JSP....still things to do, but studies and facets can be displayed. TODO: Sending parameters in the form and capture them in the server, display also compounds.

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -123,6 +123,10 @@ label.paramValue=Parameter Value
 label.StudyXrefs=Other identifiers
 UpdatePTPFailed=Updating study from public to private FAILED in
 
+label.facetStatus=Status
+label.descriptors=Descriptors
+
+
 title.serviceName=MetaboLights
 title.download=Download
 title.submit=Submit
