Study validation tab added to entry page

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -452,6 +452,7 @@ label.viewAllFiles=View all files
 label.downloadstudy=Download whole study
 msg.noMetabolitesFound=This study does not contain any identified metabolites.
 label.Files=Study Files
+label.studyvalidation=Study Validation
 label.downloadstudyMetadata=Download metadata
 label.fileListTableExplanation=List of study files
 label.fileListTableInstructions=To download a single file, just click on the file name. To download multiple files, use the check boxes and then click "Download selected files" button. Files will be zipped and downloaded to your browser.
