Studies going live more flexible: number of days as a parameter. New facet:Type (study or compound)

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -67,7 +67,7 @@ label.organismPart=Organism Part
 label.protocolRef=Protocol Reference
 label.sampleName=Sample Name
 label.factor=Factor
-
+label.entrytype=Type
 # label.pubBy=Publication by
 # label.pubIn=See publication
 # label.metaboLightsEntry=MetaboLights Entry
