Raw files size for each study is updated in the study summary

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -60,6 +60,7 @@ label.subDate=Submitted
 label.expFact=Study Factors
 label.expId=Study identifier
 label.subm=Submitted by
+label.filesize=Total Study size
 label.expPrivate=Private study
 label.assays=Assay
 label.sourceName=Source Name
