index page layout changes

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -97,9 +97,9 @@ label.publictoprivate=Make study private
 label.deleteStudy=Delete study
 label.viewMySubmissions=View my submissions
 label.submitNewStudy=Submit a new study
-label.submitNewStudySub=Use this option if your study has not been submitted before
+label.submitNewStudySub=Use this option if your study has not been<br/> submitted before
 label.updateOldStudy=Update an existing study
-label.updateOldStudySub=Use this option if you like to update a previously submitted study
+label.updateOldStudySub=Use this option if you like to update a previously<br/> submitted study
 label.studyDesign=Study Design Description
 label.protocols=Protocols
 label.data=Data
