--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -54,6 +54,7 @@ label.create=Create
 label.cancel=Cancel
 label.update=Update
 label.releaseDate=Release date
+label.updateDate=Update date
 label.spectraFile=Choose Compound Reference Spectra file
 # label.pickReleaseDate=Public Date
 label.subDate=Submitted
