Added a new label for the new facet: Validations Status

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -70,6 +70,7 @@ label.protocolRef=Protocol Reference
 label.sampleName=Sample Name
 label.factor=Factor
 label.entrytype=Type
+label.validationsStatus=Validations Status
 # label.pubBy=Publication by
 # label.pubIn=See publication
 # label.metaboLightsEntry=MetaboLights Entry
