Allow Curators to remove files from a study. - Added file deletion request to the web service (secured!) - Added method in the WS-client to delete files of a study - Added a button (if curator) to the files tab to delete all the files that are selected (with confirmation!). - WEBAPP: Added a request handler (RequestMapping in the FileDispatcherCOntroller to invoke the WS-client.delete files method.

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -459,7 +459,8 @@ label.Files=Study Files
 label.studyvalidation=Study Validation
 label.downloadstudyMetadata=Download metadata
 label.fileListTableExplanation=List of study files
-label.fileListTableInstructions=To download a single file, just click on the file name. To download multiple files, use the check boxes and then click "Download selected files" button. Files will be zipped and downloaded to your browser.<br>To delete files, procede in the same maner, using the "Delete selected files" button.
+label.fileListTableInstructions=To download a single file, just click on the file name. To download multiple files, use the check boxes and then click "Download selected files" button. Files will be zipped and downloaded to your browser.
+label.fileListTableDelInstructions=To delete files, procede in the same maner, using the "Delete selected files" button.
 label.downloadSelectedFiles=Download selected files
 label.deleteSelectedFiles=Delete selected files
 title.study.paper.link=Public Link
