- Fixed bug in the facet for searching validations status details that prevented autocompletion in the input widget. - Changed the title of the facet, just in case.

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -71,7 +71,7 @@ label.sampleName=Sample Name
 label.factor=Factor
 label.entrytype=Type
 label.validationsStatus=Validations Status
-label.validationsEntriesStatusExt=Validations Description & Status
+label.validationsEntriesStatusExt=Validations Status Details
 # label.pubBy=Publication by
 # label.pubIn=See publication
 # label.metaboLightsEntry=MetaboLights Entry
