Bugfix: update study page failed for studies without a title (horrible wrong studies) Listen to files uploads Refactor validation icons presentarion (CSS + JSP)

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -34,7 +34,7 @@ label.isatabZipFile=Choose ISA-tab archive file
 label.upload=Upload
 # label.experimentstatuspublic=Make it public now?
 label.experimentMsgPublic=Your study will be <strong>private</strong> until the chosen date, minimum 28 days is required for our validation and curation.
-label.pleaseValidate=It is <strong>VERY IMPORTANT</strong> that you successfully validate the study in ISAcreator before submission
+label.pleaseValidate=It is <strong>VERY IMPORTANT</strong> that you successfully validate the study in ISAcreator before submission. However, <strong>PLEASE NOTE</strong> more stringent validation will be carried out on your study during the submission process. This will be summarised in the <strong>'Study Validation'</strong> tab.
 label.email=Email address
 label.apiToken=API token
 # label.remind=Remind me
