Added an option to request an FTP folder when submitting a new study.

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -477,3 +477,6 @@ msg.importmetabolites.status.noreport=Can't find any status report in this insta
 msg.importmetabolites.status.noreport1=<a href="importmetabolites">Do you want to import metabolites from chebi?</a>
 msg.cantAccessPage.title=Access restricted.
 msg.cantAccessPage.message=You are not authorised to access this page.
+
+label.requestFtpFolder=Request FTP folder
+msg.requestFtpFolder_long=If your zipped file is still to big, it can cause network timeouts, especially when using low-bandwidth connections. In order to avoid this, you can use an FTP connection to upload your files, and then transfer them to MetaboLights easily.
