Created a display (table) for the list of files in the study private FTP folder.

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -478,5 +478,10 @@ msg.importmetabolites.status.noreport1=<a href="importmetabolites">Do you want t
 msg.cantAccessPage.title=Access restricted.
 msg.cantAccessPage.message=You are not authorised to access this page.
 
+label.priavteFtpFolder=Private FTP folder
 label.requestFtpFolder=Request FTP folder
-msg.requestFtpFolder_long=If your zipped file is still to big, it can cause network timeouts, especially when using low-bandwidth connections. In order to avoid this, you can use an FTP connection to upload your files, and then transfer them to MetaboLights easily.
+msg.requestFtpFolder_long=If your zipped file is still too big, it can cause network timeouts, especially when using low-bandwidth connections. In order to avoid this, you can use an FTP connection to upload your files, and then transfer them to MetaboLights easily.
+label.ftpFileListTableExplanation=List of files in your private FTP folder
+label.ftpFileList.Input.placeholder=Type part of a filename and press enter to select. Prefix with ! to deselect.
+label.moveSelectedFiles=Move selected files
+label.moveFileListTableInstructions=To move files, use the check boxes and then click "Move selected files" button. Files will be moved to your study folder.
