--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -484,4 +484,5 @@ msg.requestFtpFolder_long=If your zipped file is still too big, it can cause net
 label.ftpFileListTableExplanation=List of files in your private FTP folder
 label.ftpFileList.Input.placeholder=Type part of a filename and press enter to select. Prefix with ! to deselect.
 label.moveSelectedFiles=Move selected files
-label.moveFileListTableInstructions=To move files, use the check boxes and then click "Move selected files" button. Files will be moved to your study folder.
+label.deleteFtpSelFiles=Delete selected files
+label.moveFileListTableInstructions=Files will be moved to your study folder. To move files, use the check boxes and then click "Move selected files" button.<br><br>To delete files, procede in the same maner, using the "Delete selected files" button.
