Added curator tools link

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -155,6 +155,7 @@ menu.downloadHelp=Download data from MetaboLights
 menu.downloadplugin=Download latest metabolite identification plugin
 menu.config=configuration
 menu.configCaps=Configuration
+menu.toolsCaps=Curator Tools
 menu.users=users
 menu.usersCaps=Users
 menu.Ebeye=Ebeye-Help
