--- a/metabolights-webservice/src/main/resources/messages_en.properties
+++ b/metabolights-webservice/src/main/resources/messages_en.properties
@@ -43,3 +43,6 @@ mail.status.body.inreview=Your study ({1}) is now approved by our curation team.
 mail.status.body.public= Congratulations!. Your study ({1}) is now {0}. The study is now accessible to any interested parties and will shortly be available in other search engines, such as http://metabolomexchange.org/. Please contact us if your study requires any further changes.
 
 Entry.fileMissing=File does not exist, please contact the MetaboLights Team
+
+mail.validations.status.subject=Validations Status for {0}
+mail.validations.status.body=Currently, your submitted study {0} fails our current curation requirements. These need to be addressed by the submitter before the curation process can progress. Please make the appropriate corrections and resubmit the study. Extended details enclosed.
