ORCID link in user registration page updated

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -47,7 +47,7 @@ label.lastName=Last name
 label.affili=Affiliation/Institution
 label.affiliUrl=Web address for affiliation/institution (URL)
 label.country=Country
-label.orcid=<a href="www.orcid.org" target="_blank">ORCID</a>
+label.orcid=<a href="http://www.orcid.org" target="_blank">ORCID</a>
 label.userStatus=Status
 label.userJoinDate=Join date
 label.create=Create
