- Compose a mail to be sent with all the info on it. - Create a WS method to send the mail. - Create a Velocity template of the Validations Status tab in the WebApp, to be included in the email. - Add button to send the email manually from the Validations tab

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -488,3 +488,5 @@ label.ftpFileList.Input.placeholder=Type part of a filename and press enter to s
 label.moveSelectedFiles=Move selected files
 label.deleteFtpSelFiles=Delete selected files
 label.moveFileListTableInstructions=Files will be moved to your study folder. To move files, use the check boxes and then click "Move selected files" button.<br><br>To delete files, procede in the same maner, using the "Delete selected files" button.
+
+label.sendValidationsStatusReport=Email Report to submitter
