--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -300,6 +300,7 @@ msg.statistics.data=Data in MetaboLights
 msg.statistics.compounds=MetaboLights compounds references from other databases
 msg.statistics.users=Registered users
 msg.statistics.topSub=Most active submitters
+msg.statistics.graph=Data growth over time
 msg.statistics.info=General info
 msg.useroptions=these are your account options.
 msg.useroptionscurator=As a curator, you may also want to ...
