Message amended: Please wait a while for the file to be uploaded... reads now Please wait for the file to be uploaded...

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -234,7 +234,7 @@ msg.accountActive.old=\n\nYour new MetaboLights account "{0}" has been activated
 \n\nYou can now use this account to submit data to the MetaboLights repository.\
 \n\n\nKind regards,\
 \nThe MetaboLights Team
-msg.pleaseWaitForUpload=Please wait a while for the file to be uploaded...
+msg.pleaseWaitForUpload=Please wait for the file to be uploaded...
 
 # Search pages modes messages
 #msg.searchedInfo=MetaboLights results for {{}}
