changes to include jstl in web app

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -191,7 +191,7 @@ msg.loggedOutMsg=You have been logged out.
 msg.reqFieldMissing=Required field(s) are missing.
 msg.incorrUserPw=Incorrect user name and/or password.
 msg.loggedIn=You have successfully logged in.
-msg.loggedOut=You've logged out. See you again soon!
+msg.loggedOut=You've%20logged%20out.%20See%20you%20again%20soon!
 msg.credentials=Please provide your email and password for authorized access.
 msg.submCredentials=Hi! Welcome to MetaboLights study submission.
 msg.submCredentialsShort=Welcome to MetaboLights study submission
