removed OLD compound page link, CSS changes to statistics pages, uncommented study page pathways tab - MetExplore Stuff

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -297,7 +297,7 @@ msg.deleteStudyDialog.title=Confirmation required
 msg.deleteStudyDialog.body=Are you sure you want to delete this study?. All files and information stored will be removed and the accession number will not be available anymore.
 msg.statistics=MetaboLights Statistics
 msg.statistics.data=Data in MetaboLights
-msg.statistics.compounds=MetaboLights compounds references from other databases
+# msg.statistics.compounds=MetaboLights compounds references from other databases
 msg.statistics.users=Registered users
 msg.statistics.topSub=Most active submitters
 msg.statistics.graph=Data growth over time
