Submitters only message added for new account creation

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -214,6 +214,7 @@ msg.pwReset.body=You requested a password reset for MetaboLights. Your registere
 msg.pwsent=A new password was sent to {0}.
 msg.unknownEmail=The email address you entered is not registered with MetaboLights.
 msg.newAccount=Enter your details to request a new account for MetaboLights.
+msg.newAccount.submittersOnly=(MetaboLights user account is required only if you intend to submit data with us)
 msg.updateAccount=These are your account details. You can make changes to the current values.
 msg.accountInactive=This account is not active (yet). It needs to be activated by the MetaboLights team.
 msg.starRequired=(*) indicates required field
