--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -244,11 +244,11 @@ msg.pleaseWaitForUpload=Please wait for the file to be uploaded...
 msg.otherebiresults=Show more data from EMBL-EBI
 msg.nothingFound=No results were found for your query
 #msg.nothingFoundPersonal=You currently have no studies in MetaboLights. If you would like to submit some studies now go to our <a href="submittoqueue">Submit</a> page
-#msg.searchSuggestions=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples <a href="search?freeTextQuery=alanine">alanine</a>, <a href="search?freeTextQuery=human">human</a>, <a href="search?freeTextQuery=urine">urine</a>, <a href="search?freeTextQuery=MTBLS1">MTBLS1</a>
+#msg.searchSuggestions=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples <a href="search?freeTextQuery=alanine">alanine</a>, <a href="search?freeTextQuery=Homo sapiens">Homo sapiens</a>, <a href="search?freeTextQuery=urine">urine</a>, <a href="search?freeTextQuery=MTBLS1">MTBLS1</a>
 msg.browse.title=You are browsing MetaboLights
 msg.browse.noresults=Sorry, it seems there are no public studies available to browse. Do you want to submit the first one?
 msg.search.title=You are searching MetaboLights
-msg.search.noresults=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples are alanine, human, urine or MTBLS1.
+msg.search.noresults=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples are alanine, Homo sapiens, urine or MTBLS1.
 msg.mysubmissions.title=My submissions
 msg.mysubmissions.noresults=You currently have no studies in MetaboLights. If you would like to submit some studies now go to our submit page.
 msg.noPageFound=We could not find the page requested:
