--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -72,6 +72,7 @@ label.factor=Factor
 label.entrytype=Type
 label.validationsStatus=Validations Status
 label.validationsEntriesStatusExt=Validations Status Details
+label.FilterSpecies=Species
 label.FilterPathways=Pathways
 label.FilterReactions=Reactions
 label.FilterNMR=NMR Spectra
