Entry2 changes, compound spectra web service reset

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -462,8 +462,8 @@ menu.speciespagedescription=See below for some direct links to some common model
 menu.speciesmodeltitle=Model organisms
 menu.speciesbrowsetitle=Taxonomy Browser
 menu.speciesTypeSearch=Taxonomy Search
-label.viewAllFiles=View all files
-label.downloadstudy=Download whole study
+label.viewAllFiles=Download study (FTP)
+label.downloadstudy=Download whole study (SLOW)
 msg.noMetabolitesFound=This study does not contain any identified metabolites.
 label.Files=Study Files
 label.studyvalidation=Study Validation
