By popular requests....

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -306,7 +306,7 @@ msg.statistics=MetaboLights Statistics
 msg.statistics.data=Data in MetaboLights
 # msg.statistics.compounds=MetaboLights compounds references from other databases
 msg.statistics.users=Registered users
-msg.statistics.topSub=Most active submitters
+msg.statistics.topSub=Most active submitters (Hall of fame)
 msg.statistics.graph=Data growth over time
 msg.statistics.info=General info
 msg.useroptions=these are your account options.
