--- a/metabolights-webservice/src/main/resources/messages_en.properties
+++ b/metabolights-webservice/src/main/resources/messages_en.properties
@@ -22,7 +22,7 @@
 ## Mail messages
 mail.noreplyaddress=no-reply@ebi.ac.uk
 mail.queuedStudy.subject=Thank you! Your study {0} is now waiting to be processed.
-mail.queuedStudy.body=Hi {0}\n\nWe have received your submission, you uploaded the file {1}. \n\nPlease be patient whilst your submission is validated, processed and made available online.\nWe will send you another email with the results of our validation and processing.\n\nMany thanks for submitting your data to MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nFile size\: {2} \nTo be public on\: {3}\nServer name\: {4}\nSubmitted: {5}.
+mail.queuedStudy.body=Hi {0}\r\n\r\nWe have received your submission, you uploaded the file {1}. \n\nPlease be patient whilst your submission is validated, processed and made available online.\nWe will send you another email with the results of our validation and processing.\n\nMany thanks for submitting your data to MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nFile size\: {2} \nTo be public on\: {3}\nServer name\: {4}\nSubmitted: {5}.
 mail.submittedStudy.subject=Congratulations\! Your study {0} has been successfully processed\!
 mail.submittedStudy.body=We are happy to inform you that your submitted study ({0}) has been successfully processed. \n\nYour study is now identified in MetaboLights as {1}. \n\nThe public release date is {2}.\n\nFor private pre-publication access to your study, please see the "Share study" link at the top of the study page.\n\nMany thanks for your time and effort. You can access your study here\: {3}{1}.
 mail.errorInStudy.subject=We can not process {0}
