--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -33,8 +33,8 @@ label.isatabZipFile=Choose ISA-tab archive file
 # label.filename=File name
 label.upload=Upload
 # label.experimentstatuspublic=Make it public now?
-label.experimentMsgPublic=<b>SUBMISSION CHECKLIST</b> - Your study will <b>not</b> be published and made available to the world, until the following conditions have been satisfied: <br/> <b>A</b>. Stage 1 (ISAcreator) validation has successfully passed.<br/><b>B</b>. Stage 2 (Online) validation has successfully passed. <br/> <b>C</b>. The submitter (you) promotes the study status from <i>Submitted</i> to <i>In Curation</i> (minimum 28 days is required for our validation and curation). <br><b>D</b>. The curation team approves the study and moves the study status from <i>In Curation</i> to <i>In Review</i>. <br/><b>E</b>. Your public release date is reached.
-label.pleaseValidate=It is <strong>VERY IMPORTANT</strong> that you successfully validate the study in ISAcreator before submission. However, <strong>PLEASE NOTE</strong> more stringent validation will be carried out on your study during the submission process. This will be summarised in the <strong>'Study Validation'</strong> tab.
+label.experimentMsgPublic=<b>SUBMISSION CHECKLIST</b> - In order for your study to be published and made available to the world, the following conditions must be satisfied: <br/> <b>A</b>. Stage 1 (ISAcreator) validation has successfully passed.<br/><b>B</b>. Stage 2 (Online) validation has successfully passed. <br/> <b>C</b>. The submitter (you) promotes the study status from <i>Submitted</i> to <i>In Curation</i> (minimum 28 days is required for our validation and curation). <br><b>D</b>. The curation team approves the study and moves the study status from <i>In Curation</i> to <i>In Review</i>. <br/><b>E</b>. Your public release date is reached.
+label.pleaseValidate=It is <strong>VERY IMPORTANT</strong> that you successfully validate the study in ISAcreator before submission. Additional online validations will be carried out upon submission and will be summarised in the <strong>'Study Validation'</strong> tab.
 label.email=Email address
 label.apiToken=API token
 # label.remind=Remind me
@@ -205,9 +205,9 @@ msg.submCredentialsShort=Welcome to MetaboLights study submission
 msg.submHeader=In order to submit or update studies you need to log in or <a href="newAccount">create an account</a>
 msg.error.general=There was an unexpected error.<br/>
 msg.upload=A brand new study
-msg.upload.desc=Thanks for choosing to submit a new study to MetaboLights. We use the <a href="http://www.isa-tools.org/">ISA-Tab</a> zip archive as a submission format in MetaboLights. We know that compiling your study information can be complicated so we have written a <a href="help">step-by-step guide</a> to help you. <b>It is extremely important that you read the aforementioned guide, as it contains vital information to enable your data to be submitted successfully</b>. <BR/><BR/>Once you have used our guide <a href="help">"How to submit to MetaboLights"</a> to create your valid ISA-Tab archive file, you can upload it using the file uploader below.
+msg.upload.desc=Thanks for choosing to submit a new study to MetaboLights. We use the <a href="http://www.isa-tools.org/">ISA-Tab</a> zip archive as a submission format in MetaboLights. We know that compiling your study information can be complicated so we have written a <a href="help">step-by-step guide</a> to help you. <b>It is important that you read the aforementioned guide, as it contains vital information to enable your data to be submitted successfully</b>. <BR/><BR/>Once you have used our guide <a href="help">"How to submit to MetaboLights"</a> to create your valid ISA-Tab archive file, you can upload it using the file uploader below.
 msg.upload.desc2=Here is the link to the <a href="help">"How to submit to MetaboLights"</a> guide.
-msg.upload.desc3=<b>IMPORTANT</b>: Please ensure your study has passed <b>Stage 1 (ISAcreator) validation</b> prior to submitting to MetaboLights.<br> Stage 1 validation is available in ISACreator, under "file","Validate ISAtab". If your study successfully pass Stage 1 validation, it may fail <b>Stage 2 (Online) validation</b> if you have not followed the procedures outlined in our submission tutorial.
+msg.upload.desc3=<b>IMPORTANT</b>: Please ensure your study has passed <b>Stage 1 (ISAcreator) validation</b> prior to submitting to MetaboLights.<br> Stage 1 validation is available in ISACreator, under "file","Validate ISAtab". After your study has successfully passed Stage 1 validation, please follow the procedures outlined in our submission tutorial to pass <b>Stage 2 (Online) validation</b>.
 msg.upload.notValid=Please provide a valid file name..
 msg.upload.queueditems=You have currently some studies in the queue waiting to be processed. <b>Please, wait for your previous studies to be processed before submitting a new one.</b>
 msg.uploaded.ok1=You have successfully uploaded your experiment to MetaboLights.
@@ -216,7 +216,7 @@ msg.uploaded.ok3=REPLACEMENT DETAILS
 msg.uploaded.ok4= has been replaced with
 msg.uploaded.wrong=There was a problem during the submission process:
 msg.uploaded.checkListTitle=DETAILS
-msg.pwReset=Please fill in your registered email address and we will reset your password.
+msg.pwReset=Please fill in your registered email address and we will email you a new password.
 msg.pwReset.body=You requested a password reset for MetaboLights. Your registered password is {0}.
 msg.pwsent=A new password was sent to {0}.
 msg.unknownEmail=The email address you entered is not registered with MetaboLights.
@@ -254,7 +254,7 @@ msg.nothingFound=No results were found for your query
 #msg.searchSuggestions=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples <a href="search?freeTextQuery=alanine">alanine</a>, <a href="search?freeTextQuery=Homo sapiens">Homo sapiens</a>, <a href="search?freeTextQuery=urine">urine</a>, <a href="search?freeTextQuery=MTBLS1">MTBLS1</a>
 msg.browse.title=You are browsing MetaboLights
 msg.browse.noresults=Sorry, it seems there are no public studies available to browse. Do you want to submit the first one?
-msg.search.title=You are searching MetaboLights
+msg.search.title=Search results
 msg.search.noresults=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples are alanine, Homo sapiens, urine or MTBLS1.
 msg.mysubmissions.title=My submissions
 msg.mysubmissions.noresults=You currently have no studies in MetaboLights. If you would like to submit some studies now go to our submit page.
@@ -459,7 +459,7 @@ label.assayName=Assay file name
 label.platform=Platform
 label.mafFileFound=Metabolites
 menu.speciespageheader=Species selection page
-menu.speciespagedescription=See below for some direct links to some common model organisms and a wider list of all the organisms we have information about.
+menu.speciespagedescription=Find some direct links to some common model organisms and a wider list of all the organisms we have information about.
 menu.speciesmodeltitle=Model organisms
 menu.speciesbrowsetitle=Taxonomy Browser
 menu.speciesTypeSearch=Taxonomy Search
