--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -90,7 +90,7 @@ label.description=Description
 label.design=Design(s)
 # label.properties=Propertie(s)
 # label.sampleAttr=Sample Attribute(s)
-label.contact=Please give us feedback, we are always looking at ways to improve MetaboLights
+label.contact=We are always looking at ways to improve MetaboLights. Please provide your feed back in the form below or email us directly at <a href="mailto:metabolights-help@ebi.ac.uk ">metabolights-help@ebi.ac.uk</a>
 label.message=Message to the MetaboLights team
 # label.aboutMetab=About MetaboLights
 label.ftpDownload=Download: Experiment
@@ -198,7 +198,7 @@ msg.loggedOutMsg=You have been logged out.
 msg.reqFieldMissing=Required field(s) are missing.
 msg.incorrUserPw=Incorrect user name and/or password.
 msg.loggedIn=You have successfully logged in.
-msg.loggedOut=You've%20logged%20out.%20See%20you%20again%20soon!
+msg.loggedOut=You've logged out. See you again soon!
 msg.credentials=Please provide your email and password for authorized access.
 msg.submCredentials=Hi! Welcome to MetaboLights study submission.
 msg.submCredentialsShort=Welcome to MetaboLights study submission
