--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -148,7 +148,7 @@ menu.about=about
 menu.login=log in
 menu.myStudies=my studies
 menu.myStudiesCap=My Studies
-menu.myWorkbenchCap=Work bench
+menu.myWorkspaceCap=Work space
 menu.myAccount=my account
 menu.myAccountCaps=My Account
 menu.logout=log out
