--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -494,10 +494,10 @@ msg.curatorsOverride=Validations marked with (*) are specially approved by the M
 msg.validationsDescription=Click <a href="ftp://ftp.ebi.ac.uk/pub/databases/metabolights/documentation/MetaboLights%20Tutorial%20-%204%20-%20MetaboLights%20automatic%20validation.pdf"/>here</a> for the detailed description of Validations.
 
 
-label.priavteFtpFolder=Private FTP folder
-label.requestFtpFolder=Request FTP folder
+label.privateFtpFolder=Private upload folder
+label.requestFtpFolder=Request upload folder
 msg.requestFtpFolder_long=If your zipped file is still too big, it can cause network timeouts, especially when using low-bandwidth connections. In order to avoid this, you can use an FTP connection to upload your files, and then transfer them to MetaboLights easily.
-label.ftpFileListTableExplanation=List of files in your private FTP folder
+label.ftpFileListTableExplanation=List of files in your private upload folder
 label.ftpFileList.Input.placeholder=Type part of a filename and press enter to select. Prefix with ! to deselect.
 label.moveSelectedFiles=Move selected files
 label.deleteFtpSelFiles=Delete selected files
