Changed a message on the validation page

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -490,7 +490,7 @@ msg.importmetabolites.status.noreport=Can't find any status report in this insta
 msg.importmetabolites.status.noreport1=<a href="importmetabolites">Do you want to import metabolites from chebi?</a>
 msg.cantAccessPage.title=Access restricted.
 msg.cantAccessPage.message=You are not authorised to access this page.
-msg.curatorsOverride=Validations marked with (*) are specially approved by the MetaboLights Curators.
+msg.curatorsOverride=Validations marked with (*) have been allowed by the MetaboLights Curators.
 msg.validationsDescription=Click <a href="ftp://ftp.ebi.ac.uk/pub/databases/metabolights/documentation/MetaboLights%20Tutorial%20-%204%20-%20MetaboLights%20automatic%20validation.pdf"/>here</a> for the detailed description of Validations.
 
 
