--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -110,7 +110,7 @@ label.updateOldStudy=Update an existing study
 label.updateOldStudySub=Use this option if you like to update a previously<br/> submitted study
 label.studyDesign=Study Design
 label.protocols=Protocols
-label.data=Data
+label.data=Instrumentation
 label.assay=Assay
 label.sample=Samples
 label.publications=Publications
@@ -480,7 +480,7 @@ title.study.paper.link=Public Link
 label.study.paper.link=This is the official link for referencing your MetaboLights study in any paper, website or other communication.
 title.study.private.link=Private Pre-Publication Link
 label.study.private.link=Share this link with reviewers and other trusted parties. Anyone with this link can access your PRIVATE study.
-label.study.share=Share
+label.study.share=Reference this study
 label.fileList.Input.placeholder=Type part of a filename and press enter to select. Prefix with ! to deselect.
 msg.confirmValidation=I confirm that this study successfully passes ISAcreator validation
 msg.contactMetabolightsAboutReleaseDate=To share a private study with journals and reviewers, please use the information available under the "Share study" link available on your study details page. To request an earlier publication date, please contact "metabolights-help@ebi.ac.uk"
