--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -108,9 +108,9 @@ label.submitNewStudy=Submit a new study
 label.submitNewStudySub=Use this option if your study has not been<br/> submitted before
 label.updateOldStudy=Update an existing study
 label.updateOldStudySub=Use this option if you like to update a previously<br/> submitted study
-label.studyDesign=Study Design Description
+label.studyDesign=Study Design
 label.protocols=Protocols
-label.data=Data
+label.data=Instrumentation
 label.assay=Assay
 label.sample=Samples
 label.publications=Publications
@@ -344,7 +344,7 @@ ref.msg.mtbl.studies=Identified in
 # ref.msg.chebi.image.url=http://www.ebi.ac.uk/chebi/displayImage.do?defaultImage=true&imageIndex=0&chebiId=
 ref.msg.technology=Technology
 ref.msg.organism=Organism
-ref.msg.status=Study status
+ref.msg.status=Status
 ref.msg.searchResult=results found for
 ref.msg.noResultSearch=You can search for a wide range of metabolites. Examples:
 ref.msg.emptyBrowse=results found
@@ -468,8 +468,8 @@ menu.speciesTypeSearch=Taxonomy Search
 label.viewAllFiles=Download study (FTP)
 label.downloadstudy=Download whole study (SLOW)
 msg.noMetabolitesFound=This study does not contain any identified metabolites.
-label.Files=Study Files
-label.studyvalidation=Study Validation
+label.Files=Files
+label.studyvalidation=Validation
 label.downloadstudyMetadata=Download metadata
 label.fileListTableExplanation=List of study files
 label.fileListTableInstructions=To download a single file, just click on the file name. To download multiple files, use the check boxes and then click "Download selected files" button. Files will be zipped and downloaded to your browser.
@@ -480,7 +480,7 @@ title.study.paper.link=Public Link
 label.study.paper.link=This is the official link for referencing your MetaboLights study in any paper, website or other communication.
 title.study.private.link=Private Pre-Publication Link
 label.study.private.link=Share this link with reviewers and other trusted parties. Anyone with this link can access your PRIVATE study.
-label.study.share=Share Study
+label.study.share=Reference this study
 label.fileList.Input.placeholder=Type part of a filename and press enter to select. Prefix with ! to deselect.
 msg.confirmValidation=I confirm that this study successfully passes ISAcreator validation
 msg.contactMetabolightsAboutReleaseDate=To share a private study with journals and reviewers, please use the information available under the "Share study" link available on your study details page. To request an earlier publication date, please contact "metabolights-help@ebi.ac.uk"
