Added GDPR Notices

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -315,7 +315,7 @@ msg.statistics.info=General info
 msg.useroptions=these are your account options.
 msg.useroptionscurator=As a curator, you may also want to ...
 msg.fetchingData=Fetching data...
-msg.T&CAcceptance=I understand that all public data is freely available by any individual and for any purpose.
+msg.T&CAcceptance=I understand that all public data is freely available by any individual and for any purpose
 msg.T&Cinvalid=You must accept EBI terms and conditions.
 msg.trainOnline=A quick introduction to MetaboLights is also available on  <a href="http://www.ebi.ac.uk/training/online/course/metabolights-quick-tour/what-metabolights">EBI Train Online</a>&nbsp;<a href="http://www.ebi.ac.uk/training/online/course/metabolights-quick-tour/what-metabolights"><span class="icon icon-generic" data-icon="T" id="trainonline"/></a>
 msg.about.cosmos=Coordinated by <a href="http://www.ebi.ac.uk/about/people/christoph-steinbeck/">Dr Christoph Steinbeck</a> of the EMBL-European Bioinformatics Institute, COSMOS (Coordination of Standards in Metabolomics) will bring together European data providers to set and promote community standards that will make it easier to disseminate metabolomics data through life science e-infrastructures. This Coordination Action has been financed with 2 million euros by the European Commission's Seventh Framework Programme.
