Compounds page fix, Labs minor changes

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -161,7 +161,7 @@ menu.downloadHelp=Download data from MetaboLights
 menu.downloadplugin=Download latest metabolite identification plugin
 menu.config=configuration
 menu.configCaps=Configuration
-menu.toolsCaps=Curator Tools
+menu.toolsCaps=User Feedback
 menu.compoundsDashboard=Compounds Dashboard
 menu.users=users
 menu.usersCaps=Users
@@ -313,7 +313,7 @@ msg.statistics.topSub=Most active submitters (Hall of fame)
 msg.statistics.graph=Data growth over time
 msg.statistics.info=General info
 msg.useroptions=these are your account options.
-msg.useroptionscurator=As a curator, you may also want to ...
+msg.useroptionscurator=Curator tools
 msg.fetchingData=Fetching data...
 msg.T&CAcceptance=I understand that all public data is freely available by any individual and for any purpose
 msg.T&Cinvalid=You must accept EBI terms and conditions.
