Removed "if you like" from the update study message

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -107,7 +107,7 @@ label.viewMySubmissions=View my submissions
 label.submitNewStudy=Submit a new study
 label.submitNewStudySub=Use this option if your study has not been<br/> submitted before
 label.updateOldStudy=Update an existing study
-label.updateOldStudySub=Use this option if you like to update a previously<br/> submitted study
+label.updateOldStudySub=Use this option to update a previously<br/> submitted study
 label.studyDesign=Study Design
 label.protocols=Protocols
 label.data=Instrumentation
