- Support email message changed to determine if the current spam messages originate from the web app

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -272,7 +272,7 @@ msg.showing=showing
 msg.to=to
 msg.emailSent=Message Sent
 # msg.emailContactUsFrom=Message from MetaboLights website
-msg.emailContactUsTo=Message to the MetaboLights team
+msg.emailContactUsTo=Message to the MetaboLights team (from the web app)
 msg.emailStudyLinkSubject=Regarding your MetaboLights Study
 msg.studySoonLive=Good news! \n\nThis is just a reminder that your study {0} will be publicly available on the {1}.\n
 msg.welcomeWithStudies=Hi {0}, you have {1} studie(s).
