- Removed MetaboLights feedback form - Change a typo  in the "new study" email

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -90,7 +90,7 @@ label.description=Description
 label.design=Design(s)
 # label.properties=Propertie(s)
 # label.sampleAttr=Sample Attribute(s)
-label.contact=We are always looking at ways to improve MetaboLights. Please provide your feed back in the form below or email us directly at <a href="mailto:metabolights-help@ebi.ac.uk ">metabolights-help@ebi.ac.uk</a>
+label.contact=We are always looking at ways to improve MetaboLights. Please using the global <a href="http://www.ebi.ac.uk/support/metabolights">MetaboLights EBI Support & Feedback form</a> or email us directly at <a href="mailto:metabolights-help@ebi.ac.uk ">metabolights-help@ebi.ac.uk</a>
 label.message=Message to the MetaboLights team
 # label.aboutMetab=About MetaboLights
 label.ftpDownload=Download: Experiment
