Changed citation messages and about page to use the latest MetaboLights paper

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -415,7 +415,7 @@ BIISubmit.fileUploadComplete=File upload complete for
 BIISubmit.notValidated=You must validate the study before submission.
 
 # Mail messages
-mail.noreplyaddress=no-reply@ebi.ac.uk
+mail.noreplyaddress=metabolights-help@ebi.ac.uk
 mail.queuedStudy.subject=Thank you! Your study {0} is now waiting to be processed.
 mail.queuedStudy.body=Hi {0}\r\n\r\nWe have received your submission, you uploaded the file {1}. \n\nPlease be patient whilst your submission is validated, processed and made available online.\nWe will send you another email with the results of our validation and processing.\n\nMany thanks for submitting your data to MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nFile size\: {2} \nTo be public on\: {3}\nServer name\: {4}\nSubmitted: {5}.
 mail.submittedStudy.subject=Congratulations\! Your study {0} has been successfully processed\!
