--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -340,6 +340,7 @@ ebeye.msg.query=Query for entries and domains below:
 # ref.msg.chebi.name=CHEBI:
 ref.msg.chebi.url=http://www.ebi.ac.uk/chebi/advancedSearchFT.do?searchString=
 ref.msg.mtbl.studies=Identified in
+ref.msg.mtbl.chebiId=CHEBI ID
 # ref.msg.mtbls.url=http://www.ebi.ac.uk/metabolights/search?freeTextQuery=
 # ref.msg.chebi.image.url=http://www.ebi.ac.uk/chebi/displayImage.do?defaultImage=true&imageIndex=0&chebiId=
 ref.msg.technology=Technology
