banner for 31 May - 5 June

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -190,6 +190,9 @@ msg.metaboLightsAbout16=Please take a look at our comprehensive <a href="help">h
 msg.metaboLightsAbout17=MetaboLights is the recommended Metabolomics repository for a number of leading journals.
 msg.metaboLightsBanner= From the 31st May 2022 through to the 5th of June 2022, the metabolomics team will be on leave due to bank holidays. We will respond to any enquiries after that time.
 msg.metaboLightsAbout18=Through the <a href="https://biosharing.org/biodbcore-000168">BioSharing</a> initiative we continue to ensure that a growing number of journals that have data policies endorse MetaboLights as the recommended Metabolomics repository.
+msg.metabolightsHelp0001=Please use the <a href="https://www.ebi.ac.uk/metabolights/presubmit" target="_blank">Online Editor</a> to create new MetaboLights studies.
+msg.metabolightsHelp0002=ISA Creator and the supporting documentation (below) are for testing purposes only.
+
 
 msg.welcome=Welcome
 msg.backToMainPage=Back to the main page
