--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -202,6 +202,7 @@ msg.loggedOutHeader=Logged Out
 msg.loggedOutMsg=You have been logged out.
 msg.reqFieldMissing=Required field(s) are missing.
 msg.incorrUserPw=Incorrect user name and/or password.
+msg.authenticationFailed=Authentication failed. Please try later.
 msg.loggedIn=You have successfully logged in.
 msg.loggedOut=You've logged out. See you again soon!
 msg.credentials=Please provide your email and password for authorized access.
